--- a/课程项目/share_flutter_app/pubspec.yaml
+++ b/课程项目/share_flutter_app/pubspec.yaml
@@ -1,8 +1,7 @@
-name: share_app
+name: knowledge_sharing
 description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
 version: 1.0.0+1
 
 environment:
@@ -11,17 +10,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^0.1.3
-
+  dio: ^3.0.9
+  # 屏幕适配 "^"代表最低版本 可能会导致版本跟指定不一致 从而导致方法报错
+  # flutter_screenutil: ^2.2.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
+
+# The following section is specific to Flutter.
 flutter:
+
+  # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
+  # the material Icons class.
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  # To add assets to your application, add an assets section, like this:
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
