--- a/课程项目/content-center/src/main/resources/application.yml
+++ b/课程项目/content-center/src/main/resources/application.yml
@@ -25,11 +25,25 @@ management:
     health:
       show-details: always
 
-#user-center:
-#  ribbon:
-#    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+user-center:
+  ribbon:
+    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
 
 ribbon:
   eager-load:
     enabled: true
     clients: user-center
+
+#feign:
+#  client:
+#    config:
+#      # 全局配置
+#      default:
+#        loggerLevel: full
+#  httpclient:
+#    # 让feign使用apache httpclient做请求；而不是默认的urlconnection
+#    enabled: true
+#    # feign的最大连接数
+#    max-connections: 200
+#    # feign单个路径的最大连接数
+#    max-connections-per-route: 50
