--- a/课程项目/user-center/src/main/resources/application.yml
+++ b/课程项目/user-center/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8081
+  port: 0
 spring:
   application:
     name: user-center
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: 119.45.221.206:8848
 #        namespace: 10e5a9a3-05ce-457f-b2a3-02bcfe1b512d
 
   #        metadata:
@@ -21,7 +21,7 @@ spring:
       password: abc.123
       driver-class-name: com.mysql.cj.jdbc.Driver
       minimumIdle: 10
-      maximumPoolSize: 10
+      maximumPoolSize: 100
       maxLifetime: 1800000
       idleTimeout: 600000
       connectionTimeout: 30000
