--- a/课程项目/content-center/src/main/resources/application.yml
+++ b/课程项目/content-center/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8888
+  port: 0
 
 spring:
   application:
@@ -24,6 +24,11 @@ spring:
       username: root
       password: abc.123
       driver-class-name: com.mysql.cj.jdbc.Driver
+      minimumIdle: 10
+      maximumPoolSize: 100
+      maxLifetime: 1800000
+      idleTimeout: 600000
+      CONNECTIONTIMEOUT: 30000
 
 # Mybatis驼峰式开启，可省略
 #mybatis:
@@ -73,7 +78,8 @@ feign:
 #        loggerLevel: full
 
 rocketmq:
-  name-server: 119.45.221.206:9876
+#  name-server: 119.45.221.206:9876
+  name-server: 39.98.143.134:9876
   producer:
     # 必须指定group
     group: test-group
