--- a/ShareProject/user-center/src/main/resources/application.yml
+++ b/ShareProject/user-center/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     url: jdbc:mysql://39.98.143.134:3306/user_center?serverTimezone=Asia/Shanghai&characterEncoding=utf-8
     hikari:
       username: root
-      password: NjuitScs.123
+      password: ******
       driver-class-name: com.mysql.cj.jdbc.Driver
       minimum-idle: 10
       maximum-pool-size: 20
