--- a/ShareProject/content-center/src/main/resources/application.yml
+++ b/ShareProject/content-center/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: content-center
   zipkin:
     base-url: http://localhost:9411/
-    discoveryClientEnabled: false
+    discovery-client-enabled: false
   sleuth:
       sampler:
         # 抽样率，默认是0.1（10%）
@@ -32,7 +32,6 @@ spring:
 #    url: jdbc:mysql://39.98.143.134:3306/content_center?serverTimezone=Asia/Shanghai&characterEncoding=utf-8
     hikari:
       username: root
-#      password: HelloWorld.123
       password: root
       driver-class-name: com.mysql.cj.jdbc.Driver
 #      minimum-idle: 10
